package models;

import java.util.Date;

public class CashFlow {
    public Date getDate() { return null; }

    public double getValue() { return 0; }

    public CashFlowRate getRate() { return null; }
}