package models;

public class CashFlowRate {
    public DateTime getDate() { return null; }

    public double getValue() { return 0; }
}